<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, MainScreen!</string>
    <string name="app_name">TapToTrack</string>
    <string name="str1">Start</string>
    <string name="str2">Settings</string>
    <string name="str3">Exit</string>
    <string name="str0">Welcome to TapToTrack!</string>
    <string name="str4">Settings</string>
    <string name="str5">Server Address :</string>
    <string name="str6">Store ID :</string>
    <string name="str7">Save</string>
    <string name="str8">Male\n&gt;45</string>
    <string name="str9">Male\n15-40</string>
    <string name="str10">Male\n&lt;15</string>
    <string name="str11">Female\n&gt;45</string>
    <string name="str12">Female\n15-40</string>
    <string name="str13">Female\n&lt;15</string>
    <color name="color0">#00FF00</color>
    <color name="color1">#0000FF</color>
    <color name="color2">#3D59AB</color>
    <color name="color3">#FF0000</color>
    <color name="color4">#FF83FA</color>
    <color name="color5">#CD00CD</color>
    <color name="color6">#8B1C62</color>
    <color name="color7">#EE7AE9</color>
    <string name="str14">1</string>
    <string name="str15">5</string>
    <string name="str16">10</string>
</resources>
