<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/color0"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <TextView 
    android:id="@+id/textView1" 
    android:textAppearance="?android:attr/textAppearanceLarge" 
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content" 
    android:text="@string/str4" 
    
    android:layout_gravity="center">
    </TextView>
    <TextView 
    android:id="@+id/textView3" 
    android:layout_marginTop="40dp"
    android:textAppearance="?android:attr/textAppearanceMedium" 
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content" 
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:text="@string/str6">
    </TextView>
    <EditText android:layout_width="fill_parent" 
    android:layout_marginTop="15dp"
    android:textSize="22sp"
    android:layout_height="wrap_content" 
    android:id="@+id/storetext"
    android:singleLine="true"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    >
    <requestFocus></requestFocus>
    </EditText>
    <Button 
    android:layout_marginTop="30dp"
    android:layout_width="120dp" 
    android:layout_height="60dp" 
    android:layout_gravity="center"
    android:textSize="22sp"
    android:text="@string/str7" 
    android:id="@+id/savebutton" android:background="@drawable/defb">
    </Button>
</LinearLayout>
