<?xml version="1.0" encoding="utf-8"?>
<ViewFlipper xmlns:android="http://schemas.android.com/apk/res/android"
    	android:id="@+id/flipper"
    	android:layout_width="fill_parent" 
    	android:layout_height="fill_parent">
    	
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:id="@+id/mainlayout"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:background="@color/color0" android:orientation="vertical">
	<LinearLayout android:id="@+id/linearLayout1"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:layout_weight="1">
		<Button 
			android:layout_width="150dp" 
			android:text="@string/str8"
			android:layout_height="140dp"
			android:textSize="20sp"
			android:id="@+id/mobutton" 
			android:layout_marginLeft="10dp"
			android:layout_marginTop="2dp"
			android:singleLine="false"
			android:background="@drawable/mobtn"
			>
		</Button>
		<Button android:layout_width="150dp"
			android:text="@string/str11"
			android:layout_height="140dp"
			android:textSize="20sp"
			android:id="@+id/fobutton"
			android:layout_marginTop="2dp"
			android:singleLine="false"
			android:background="@drawable/fobtn" 
			>
		</Button>
	</LinearLayout>
	<LinearLayout android:id="@+id/linearLayout2"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:layout_weight="1">
		<Button android:layout_width="150dp" 
			android:text="@string/str9"
			android:layout_height="140dp"
			android:textSize="20sp"
			android:id="@+id/mabutton" 
			android:singleLine="false"
			android:layout_marginLeft="10dp"
			android:background="@drawable/mabtn"
			>
		</Button>
		<Button android:layout_width="150dp"
			android:text="@string/str12"
			android:layout_height="140dp"
			android:textSize="20sp"
			android:id="@+id/fabutton" 
			android:singleLine="false"
			android:background="@drawable/fabtn"
			>
		</Button>
	</LinearLayout>
	<LinearLayout android:id="@+id/linearLayout3"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:layout_weight="1">
		<Button
			android:layout_width="150dp" 
			android:text="@string/str10" 
			android:layout_height="140dp"
			android:textSize="20sp"
			android:id="@+id/mybutton"
			android:singleLine="false" 
			android:layout_marginLeft="10dp"
			android:background="@drawable/mybtn"
			>
		</Button>
		<Button 
			android:layout_width="150dp" 
			android:text="@string/str13" 
			android:layout_height="140dp"
			android:textSize="20sp"
			android:id="@+id/fybutton" 
			android:singleLine="false"
			android:background="@drawable/fybtn"
			>
		</Button>
	</LinearLayout>

</LinearLayout>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:id="@+id/mainlayout1"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:background="@color/color3" android:orientation="vertical">
	<LinearLayout android:id="@+id/linearLayout11"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:layout_weight="1">
		<Button 
			android:layout_width="150dp" 
			android:text="@string/str8"
			android:layout_height="140dp"
			android:textSize="20sp"
			android:id="@+id/mobutton1" 
			android:layout_marginLeft="10dp"
			android:layout_marginTop="2dp"
			android:singleLine="false"
			android:background="@drawable/mobtn"
			>
		</Button>
		<Button android:layout_width="150dp"
			android:text="@string/str11"
			android:layout_height="140dp"
			android:textSize="20sp"
			android:id="@+id/fobutton1"
			android:layout_marginTop="2dp"
			android:singleLine="false"
			android:background="@drawable/fobtn" 
			>
		</Button>
	</LinearLayout>
	<LinearLayout android:id="@+id/linearLayout21"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:layout_weight="1">
		<Button android:layout_width="150dp" 
			android:text="@string/str9"
			android:layout_height="140dp"
			android:textSize="20sp"
			android:id="@+id/mabutton1" 
			android:singleLine="false"
			android:layout_marginLeft="10dp"
			android:background="@drawable/mabtn"
			>
		</Button>
		<Button android:layout_width="150dp"
			android:text="@string/str12"
			android:layout_height="140dp"
			android:textSize="20sp"
			android:id="@+id/fabutton1" 
			android:singleLine="false"
			android:background="@drawable/fabtn"
			>
		</Button>
	</LinearLayout>
	<LinearLayout android:id="@+id/linearLayout31"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:layout_weight="1">
		<Button
			android:layout_width="150dp" 
			android:text="@string/str10" 
			android:layout_height="140dp"
			android:textSize="20sp"
			android:id="@+id/mybutton1"
			android:singleLine="false" 
			android:layout_marginLeft="10dp"
			android:background="@drawable/mybtn"
			>
		</Button>
		<Button 
			android:layout_width="150dp" 
			android:text="@string/str13" 
			android:layout_height="140dp"
			android:textSize="20sp"
			android:id="@+id/fybutton1" 
			android:singleLine="false"
			android:background="@drawable/fybtn"
			>
		</Button>
	</LinearLayout>
</LinearLayout>
</ViewFlipper>
<!--android:background="@drawable/mobtn"-->